--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
+# Stack Auth envs.
+NEXT_PUBLIC_STACK_PROJECT_ID=
+NEXT_PUBLIC_STACK_PUBLISHABLE_CLIENT_KEY=
+STACK_SECRET_SERVER_KEY=
+
+# Google envs.
 NEXT_PUBLIC_GOOGLE_ANALYTICS_MEASUREMENT_ID=
+
+# OpenAI envs.
 OPENAI_API_KEY=
 OPENAI_MODEL_ID=
