--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "version": "0.2.0",
   "keywords": [
     "nextjs",
-    "firebase",
+    "stackframe",
     "typescript",
-    "daisyui"
+    "daisyui",
+    "langchain",
+    "openai"
   ],
   "homepage": "https://buckeye.chat",
   "license": "GPL-3.0-only",
@@ -46,15 +48,15 @@
     "@langchain/core": "^0.3.22",
     "@langchain/openai": "^0.3.14",
     "@next/third-parties": "^15.0.4",
+    "@stackframe/stack": "^2.6.33",
     "ai": "^4.0.13",
     "langchain": "^0.3.6",
     "next": "15.0.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
     "remark-gfm": "^4.0.0",
-    "uuid": "^11.0.3",
-    "zod": "^3.23.8"
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
