feat(/lib/stackauth/): in process of adding custom stack auth. Implemented sign-in UI

--- a/biome.json
+++ b/biome.json
@@ -27,8 +27,9 @@
   },
   "javascript": {
     "formatter": {
+      "quoteStyle": "single",
       "semicolons": "always",
-      "trailingCommas": "none"
+      "trailingCommas": "all"
     }
   },
   "json": {
