--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,17 +18,11 @@
         "name": "next"
       }
     ],
-    "baseUrl": ".",
+    "types": ["vitest/globals"],
     "paths": {
-      "@app/*": ["src/app/*"],
-      "@components/*": ["src/components/*"],
-      "@constants/*": ["src/constants/*"],
-      "@lib/*": ["src/lib/*"],
-      "@schemas/*": ["src/schemas/*"],
-      "@utils/*": ["src/utils/*"]
+      "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"],
-  "types": ["vitest/globals"]
+  "include": ["nexlib/*s", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "exclude": ["node_modules"]
 }
