--- a/package.json
+++ b/package.json
@@ -45,30 +45,37 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
-    "@langchain/core": "^0.3.24",
-    "@langchain/openai": "^0.3.14",
-    "@next/third-parties": "^15.1.1",
-    "@stackframe/stack": "^2.6.37",
-    "ai": "^4.0.20",
+    "@hookform/resolvers": "^3.9.1",
+    "@keminghe/osu": "^4.0.1",
+    "@langchain/core": "^0.3.26",
+    "@langchain/openai": "^0.3.16",
+    "@next/third-parties": "^15.1.2",
+    "@stackframe/stack": "^2.7.0",
+    "ai": "^4.0.22",
+    "canvas-confetti": "^1.9.3",
     "langchain": "^0.3.7",
-    "next": "^15.1.1",
+    "next": "^15.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-markdown": "^9.0.1",
+    "react-toastify": "^11.0.2",
     "remark-gfm": "^4.0.0",
     "server-only": "^0.0.1",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@playwright/test": "^1.49.1",
-    "@release-it/conventional-changelog": "^9.0.3",
+    "@release-it/conventional-changelog": "^9.0.4",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.5.2",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/dotenv-safe": "^8.1.6",
     "@types/node": "^22.10.2",
-    "@types/react": "^18.3.17",
+    "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
@@ -80,7 +87,7 @@
     "jsdom": "^25.0.1",
     "postcss": "^8.4.49",
     "realfavicon": "^0.4.12",
-    "release-it": "^17.10.0",
+    "release-it": "^17.11.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2",
     "vite-tsconfig-paths": "^5.1.4",
