ci(.github/workflows): added unit-test and e2e-test workflows
also updated GitHub Action secrets to allow workflow run, replaced single openai model id with now
lite, regular, and premium 3 options. using lite for default

completes #22

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,13 @@
+# Google envs.
+NEXT_PUBLIC_GOOGLE_ANALYTICS_MEASUREMENT_ID=
+
 # Stack Auth envs.
 NEXT_PUBLIC_STACK_PROJECT_ID=
 NEXT_PUBLIC_STACK_PUBLISHABLE_CLIENT_KEY=
 STACK_SECRET_SERVER_KEY=
 
-# Google envs.
-NEXT_PUBLIC_GOOGLE_ANALYTICS_MEASUREMENT_ID=
-
 # OpenAI envs.
 OPENAI_API_KEY=
-OPENAI_MODEL_ID=
+OPENAI_LITE_MODEL_ID=
+OPENAI_REGULAR_MODEL_ID=
+OPENAI_PREMIUM_MODEL_ID=
