feat(hooks/usechat/): adopted custom useChat.ts starting with modularized copy of ai sdk's useChat
no functional modification, tested working as the first step to building custom useChat

--- a/biome.json
+++ b/biome.json
@@ -18,6 +18,7 @@
   },
   "linter": {
     "enabled": true,
+    "ignore": ["hooks/useChat"],
     "rules": {
       "recommended": true,
       "correctness": {
