--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,15 @@ OPENAI_API_KEY=
 OPENAI_LITE_MODEL_ID=
 OPENAI_REGULAR_MODEL_ID=
 OPENAI_PREMIUM_MODEL_ID=
+
+# Google Gemini envs.
+GOOGLE_GEMINI_API_KEY=
+GOOGLE_GEMINI_LITE_MODEL_ID=
+GOOGLE_GEMINI_REGULAR_MODEL_ID=
+GOOGLE_GEMINI_PREMIUM_MODEL_ID=
+
+# Anthropic Claude envs.
+ANTHROPIC_CLAUDE_API_KEY=
+ANTHROPIC_CLAUDE_LITE_MODEL_ID=
+ANTHROPIC_CLAUDE_REGULAR_MODEL_ID=
+ANTHROPIC_CLAUDE_PREMIUM_MODEL_ID=
