test(vitest.config.ts): added v8 coverage reporter to devdeps, updated action scripts
also configured codcov saas to track coverage history. also updated lib/langchain/ filenames for
consistency. no behavior change

fix #79, completes #81

--- a/.env.example
+++ b/.env.example
@@ -7,10 +7,10 @@ NEXT_PUBLIC_STACK_PUBLISHABLE_CLIENT_KEY=
 STACK_SECRET_SERVER_KEY=
 
 # OpenAI envs.
-OPENAI_API_KEY=
-OPENAI_LITE_MODEL_ID=
-OPENAI_REGULAR_MODEL_ID=
-OPENAI_PREMIUM_MODEL_ID=
+OPENAI_GPT_API_KEY=
+OPENAI_GPT_LITE_MODEL_ID=
+OPENAI_GPT_REGULAR_MODEL_ID=
+OPENAI_GPT_PREMIUM_MODEL_ID=
 
 # Google Gemini envs.
 GOOGLE_GEMINI_API_KEY=
