--- a/.github/workflows/code-quality.yaml
+++ b/.github/workflows/code-quality.yaml
@@ -1,18 +1,17 @@
-name: ChangeSet
+name: Biome CI
 
 on:
   push:
-    branches:
-      - main
-
-concurrency: ${{ github.workflow }}-${{ github.ref }}
+  pull_request:
+  workflow_dispatch:
+  schedule:
+    - cron: '0 7 * * 0'
 
 jobs:
-  release:
+  unit-test:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      pull-requests: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -33,8 +32,5 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Create changeset release pull request
-        # Pinned to commit hash of release v1.4.9 on 10/14/24.
-        uses: changesets/action@c8bada60c408975afd1a20b3db81d6eee6789308
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Check import organization, formatting, and lint
+        run: pnpm lint
