ci(package.json): removed husky || true fallback to further inspect ci issue
also temp removed verify hook to avoid unnecessary code-scanning api calls

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "email": "keminghe.career@gmail.com"
   },
   "scripts": {
-    "prepare": "husky || true",
+    "prepare": "husky",
     "lint": "biome ci .",
     "lint:fix": "biome check --write .",
     "build": "next build",
