--- a/.github/workflows/code-quality.yaml
+++ b/.github/workflows/code-quality.yaml
@@ -8,7 +8,7 @@ on:
     - cron: '0 7 * * 0'
 
 jobs:
-  unit-test:
+  code-quality:
     runs-on: ubuntu-latest
     permissions:
       contents: read
