--- a/.github/workflows/code-quality.yaml
+++ b/.github/workflows/code-quality.yaml
@@ -13,13 +13,6 @@ jobs:
     permissions:
       contents: read
     steps:
-      - name: Debug
-        run: |
-          echo "CI=$CI"
-          echo "GITHUB_ACTIONS=$GITHUB_ACTIONS"
-          echo "NODE_ENV=$NODE_ENV"
-          echo "CI_COMMIT_REF_NAME=$CI_COMMIT_REF_NAME"
-          
       - name: Checkout code
         uses: actions/checkout@v4
         with:
@@ -35,6 +28,24 @@ jobs:
         with:
           node-version-file: .nvmrc
           cache: 'pnpm'
+
+      - name: Debug Environment Variables
+        run: |
+          echo "Values:"
+          echo "CI=$CI"
+          echo "GITHUB_ACTIONS=$GITHUB_ACTIONS"
+          echo "NODE_ENV=$NODE_ENV"
+          
+          echo -e "\nTypes:"
+          node -e "console.log('typeof CI:', typeof process.env.CI)"
+          node -e "console.log('typeof GITHUB_ACTIONS:', typeof process.env.GITHUB_ACTIONS)"
+          node -e "console.log('typeof NODE_ENV:', typeof process.env.NODE_ENV)"
+          
+          echo -e "\nEquality Checks:"
+          node -e "console.log('CI === true:', process.env.CI === true)"
+          node -e "console.log('CI === \"true\":', process.env.CI === 'true')"
+          node -e "console.log('GITHUB_ACTIONS === true:', process.env.GITHUB_ACTIONS === true)"
+          node -e "console.log('GITHUB_ACTIONS === \"true\":', process.env.GITHUB_ACTIONS === 'true')"
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
