fix(release.yaml): disabled husky hooks during ci (changeset version)
removed previously buggy and cumbersome checks within husky hooks

fix #107

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,6 +13,9 @@ jobs:
     permissions:
       contents: read
       pull-requests: write
+    env:
+      # Disable Husky hooks during CI.
+      HUSKY: 0
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
