--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -41,3 +41,6 @@ jobs:
         uses: changesets/action@c8bada60c408975afd1a20b3db81d6eee6789308
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          commit: 'chore(package.json, CHANGELOG.md): created new changeset release'
+          title: 'chore(package.json, CHANGELOG.md): created new changeset release'
