--- a/package.json
+++ b/package.json
@@ -47,20 +47,18 @@
     "start": "next start"
   },
   "dependencies": {
-    "@ai-sdk/provider-utils": "^2.1.5",
-    "@ai-sdk/ui-utils": "^1.1.6",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.10.0",
     "@keminghe/osu": "^4.0.1",
     "@langchain/anthropic": "^0.3.12",
-    "@langchain/core": "^0.3.36",
-    "@langchain/google-genai": "^0.1.6",
+    "@langchain/core": "^0.3.37",
+    "@langchain/google-genai": "^0.1.8",
     "@langchain/openai": "^0.3.17",
     "@next/third-parties": "^15.1.6",
     "@stackframe/stack": "^2.7.8",
-    "ai": "^4.1.9",
+    "ai": "^4.1.13",
     "canvas-confetti": "^1.9.3",
-    "langchain": "^0.3.13",
+    "langchain": "^0.3.15",
     "next": "^15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -71,13 +69,11 @@
     "react-tooltip": "^5.28.0",
     "remark-gfm": "^4.0.0",
     "server-only": "^0.0.1",
-    "swr": "^2.3.0",
-    "throttleit": "^2.1.0",
-    "uuid": "^11.0.5",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
+    "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.12",
     "@playwright/test": "^1.50.0",
     "@testing-library/jest-dom": "^6.6.3",
