feat(.env): added langsmith tracing to monitor usage
also fixed to auto-focus after clear messages. added more unittests to modules.

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,14 @@ NEXT_PUBLIC_STACK_PROJECT_ID=
 NEXT_PUBLIC_STACK_PUBLISHABLE_CLIENT_KEY=
 STACK_SECRET_SERVER_KEY=
 
+# LangChain envs.
+LANGSMITH_TRACING=
+LANGSMITH_ENDPOINT=
+LANGSMITH_API_KEY=
+LANGSMITH_PROJECT=
+# In serverless env, recommend allow tracing to finish before call ends.
+LANGCHAIN_CALLBACKS_BACKGROUND=
+
 # OpenAI envs.
 OPENAI_GPT_API_KEY=
 OPENAI_GPT_LITE_MODEL_ID=
