ci(workflows/*.yaml): restricted actions to KemingHe/buckeye-gpt only
also updated deps and refactored server acitons into endpoints for best
practice, see CHANGELOG.md for details

fix #134

--- a/.github/workflows/code-quality.yaml
+++ b/.github/workflows/code-quality.yaml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   code-quality:
+    if: github.repository == 'KemingHe/buckeye-gpt'
     runs-on: ubuntu-latest
     permissions:
       contents: read
