--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "type": "module",
   "name": "buckeye-gpt",
-  "description": "ChatGPT clone (with latest OpenAI models) built free for students at the Ohio State University.",
+  "description": "Buckeye GPT is an independent AI chatbot making advanced language models freely accessible to Ohio State students",
   "version": "0.16.1",
   "keywords": [
     "nextjs",
@@ -50,22 +50,22 @@
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.10.0",
     "@keminghe/osu": "^4.0.1",
-    "@langchain/anthropic": "^0.3.13",
-    "@langchain/core": "^0.3.40",
-    "@langchain/google-genai": "^0.1.8",
+    "@langchain/anthropic": "^0.3.15",
+    "@langchain/core": "^0.3.42",
+    "@langchain/google-genai": "^0.1.10",
     "@langchain/openai": "^0.3.17",
-    "@next/third-parties": "^15.1.7",
-    "@stackframe/stack": "^2.7.18",
-    "ai": "^4.1.45",
+    "@next/third-parties": "^15.2.0",
+    "@stackframe/stack": "^2.7.21",
+    "ai": "^4.1.47",
     "canvas-confetti": "^1.9.3",
     "langchain": "^0.3.19",
-    "next": "^15.1.7",
+    "next": "^15.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-markdown": "^9.1.0",
     "react-modal": "^3.16.3",
-    "react-toastify": "^11.0.3",
+    "react-toastify": "^11.0.5",
     "react-tooltip": "^5.28.0",
     "remark-gfm": "^4.0.1",
     "server-only": "^0.0.1",
@@ -81,25 +81,25 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/canvas-confetti": "^1.9.0",
     "@types/dotenv-safe": "^8.1.6",
-    "@types/node": "^22.13.5",
+    "@types/node": "^22.13.8",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@types/react-modal": "^3.16.3",
     "@vitejs/plugin-react": "^4.3.4",
-    "@vitest/coverage-v8": "^3.0.6",
+    "@vitest/coverage-v8": "^3.0.7",
     "autoprefixer": "^10.4.20",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
-    "daisyui": "^4.12.23",
+    "daisyui": "^4.12.24",
     "dotenv-safe": "^9.1.0",
     "husky": "^9.1.7",
     "jsdom": "^25.0.1",
     "postcss": "^8.5.3",
     "realfavicon": "^0.4.12",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.3",
+    "typescript": "^5.8.2",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.0.6"
+    "vitest": "^3.0.7"
   },
   "packageManager": "pnpm@10.2.1+sha512.398035c7bd696d0ba0b10a688ed558285329d27ea994804a52bad9167d8e3a72bcb993f9699585d3ca25779ac64949ef422757a6c31102c12ab932e5cbe5cc92"
 }
