feat(chats/gemini/*): added gemini endpoint with google search grounding
buckeye gpt is now agentic

--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,7 @@ ANTHROPIC_CLAUDE_API_KEY=
 ANTHROPIC_CLAUDE_LITE_MODEL_ID=
 ANTHROPIC_CLAUDE_REGULAR_MODEL_ID=
 ANTHROPIC_CLAUDE_PREMIUM_MODEL_ID=
+
+# Google Custom Search envs
+GOOGLE_CUSTOM_SEARCH_API_KEY=
+GOOGLE_CUSTOM_SEARCH_ENGINE_ID=
