--- a/package.json
+++ b/package.json
@@ -47,6 +47,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@agentic/ai-sdk": "^7.6.4",
+    "@agentic/google-custom-search": "^7.6.4",
+    "@ai-sdk/google": "^1.2.10",
+    "@ai-sdk/openai": "^1.3.10",
+    "@ai-sdk/react": "^1.2.8",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.10.0",
     "@keminghe/osu": "^4.0.1",
