--- a/.github/workflows/e2e-test.yaml
+++ b/.github/workflows/e2e-test.yaml
@@ -17,33 +17,19 @@ jobs:
       # process.env.CI is automatically set to true by GitHub Actions.
       # process.env.NODE_ENV is automatically set to production by next start.
       PLAYWRIGHT_DEPS_PATH: /tmp/.ms-playwright
-      # Google Analytics credentials.
+      # Google Analytics credentials
       NEXT_PUBLIC_GOOGLE_ANALYTICS_MEASUREMENT_ID: ${{ secrets.NEXT_PUBLIC_GOOGLE_ANALYTICS_MEASUREMENT_ID }}
-      # Stack Auth credentials.
+      # Stack Auth credentials
       NEXT_PUBLIC_STACK_PROJECT_ID               : ${{ secrets.NEXT_PUBLIC_STACK_PROJECT_ID }}
       NEXT_PUBLIC_STACK_PUBLISHABLE_CLIENT_KEY   : ${{ secrets.NEXT_PUBLIC_STACK_PUBLISHABLE_CLIENT_KEY }}
       STACK_SECRET_SERVER_KEY                    : ${{ secrets.STACK_SECRET_SERVER_KEY }}
-      # LangChain credentials.
-      LANGSMITH_TRACING                          : ${{ secrets.LANGSMITH_TRACING }}
-      LANGSMITH_ENDPOINT                         : ${{ secrets.LANGSMITH_ENDPOINT }}
-      LANGSMITH_API_KEY                          : ${{ secrets.LANGSMITH_API_KEY }}
-      LANGSMITH_PROJECT                          : ${{ secrets.LANGSMITH_PROJECT }}
-      LANGCHAIN_CALLBACKS_BACKGROUND             : ${{ secrets.LANGCHAIN_CALLBACKS_BACKGROUND }}
-      # OpenAI credentials.
-      OPENAI_GPT_API_KEY                         : ${{ secrets.OPENAI_GPT_API_KEY }}
-      OPENAI_GPT_LITE_MODEL_ID                   : ${{ secrets.OPENAI_GPT_LITE_MODEL_ID }}
-      OPENAI_GPT_REGULAR_MODEL_ID                : ${{ secrets.OPENAI_GPT_REGULAR_MODEL_ID }}
-      OPENAI_GPT_PREMIUM_MODEL_ID                : ${{ secrets.OPENAI_GPT_PREMIUM_MODEL_ID }}
-      # Google Gemini credentials.
+      # Google Gemini credentials
       GOOGLE_GEMINI_API_KEY                      : ${{ secrets.GOOGLE_GEMINI_API_KEY }}
       GOOGLE_GEMINI_LITE_MODEL_ID                : ${{ secrets.GOOGLE_GEMINI_LITE_MODEL_ID }}
-      GOOGLE_GEMINI_REGULAR_MODEL_ID             : ${{ secrets.GOOGLE_GEMINI_REGULAR_MODEL_ID }}
       GOOGLE_GEMINI_PREMIUM_MODEL_ID             : ${{ secrets.GOOGLE_GEMINI_PREMIUM_MODEL_ID }}
-      # Anthropic Claude credentials.
-      ANTHROPIC_CLAUDE_API_KEY                   : ${{ secrets.ANTHROPIC_CLAUDE_API_KEY }}
-      ANTHROPIC_CLAUDE_LITE_MODEL_ID             : ${{ secrets.ANTHROPIC_CLAUDE_LITE_MODEL_ID }}
-      ANTHROPIC_CLAUDE_REGULAR_MODEL_ID          : ${{ secrets.ANTHROPIC_CLAUDE_REGULAR_MODEL_ID }}
-      ANTHROPIC_CLAUDE_PREMIUM_MODEL_ID          : ${{ secrets.ANTHROPIC_CLAUDE_PREMIUM_MODEL_ID }}
+      # Google Custom Search credentials
+      GOOGLE_CUSTOM_SEARCH_API_KEY               : ${{ secrets.GOOGLE_CUSTOM_SEARCH_API_KEY }}
+      GOOGLE_CUSTOM_SEARCH_ENGINE_ID             : ${{ secrets.GOOGLE_CUSTOM_SEARCH_ENGINE_ID }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
